Добавил защиту любых действий с задачами после авторизации
