# go-task-manager-service/docs/swagger.json
@@ -31,7 +31,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.User"
+                            "$ref": "#/definitions/models.LoginUserRequest"
                         }
                     }
                 ],
@@ -70,7 +70,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.User"
+                            "$ref": "#/definitions/models.RegisterUserRequest"
                         }
                     }
                 ],
@@ -92,7 +92,12 @@
         },
         "/tasks": {
             "get": {
-                "description": "Возвращает задачи, отфильтрованные по статусу, приоритету и дате",
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
+                "description": "Возвращает задачи, отфильтрованные по статусу, приоритету и дате (требуется авторизация)",
                 "consumes": [
                     "application/json"
                 ],
@@ -151,7 +156,12 @@
                 }
             },
             "post": {
-                "description": "Создает новую задачу",
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
+                "description": "Создает новую задачу (требуется авторизация)",
                 "consumes": [
                     "application/json"
                 ],
@@ -186,6 +196,12 @@
                             "$ref": "#/definitions/rest.Response"
                         }
                     },
+                    "401": {
+                        "description": "Неавторизованный доступ",
+                        "schema": {
+                            "$ref": "#/definitions/rest.Response"
+                        }
+                    },
                     "500": {
                         "description": "Ошибка сервера",
                         "schema": {
@@ -197,7 +213,12 @@
         },
         "/tasks/{id}": {
             "get": {
-                "description": "Возвращает задачу по её ID",
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
+                "description": "Возвращает задачу по её ID (требуется авторизация)",
                 "consumes": [
                     "application/json"
                 ],
@@ -207,7 +228,7 @@
                 "tags": [
                     "tasks"
                 ],
-                "summary": "Получение задачи по ID (вспомогательная)",
+                "summary": "Получение задачи по ID",
                 "parameters": [
                     {
                         "type": "integer",
@@ -245,7 +266,12 @@
                 }
             },
             "put": {
-                "description": "Обновляет информацию о задаче",
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
+                "description": "Обновляет информацию о задаче (требуется авторизация)",
                 "consumes": [
                     "application/json"
                 ],
@@ -302,7 +328,12 @@
                 }
             },
             "delete": {
-                "description": "Удаляет задачу по указанному ID",
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
+                "description": "Удаляет задачу по указанному ID (требуется авторизация)",
                 "consumes": [
                     "application/json"
                 ],
@@ -393,6 +424,40 @@
                 }
             }
         },
+        "models.LoginUserRequest": {
+            "type": "object",
+            "required": [
+                "password",
+                "username"
+            ],
+            "properties": {
+                "password": {
+                    "type": "string",
+                    "example": "123456"
+                },
+                "username": {
+                    "type": "string",
+                    "example": "testuser"
+                }
+            }
+        },
+        "models.RegisterUserRequest": {
+            "type": "object",
+            "required": [
+                "password",
+                "username"
+            ],
+            "properties": {
+                "password": {
+                    "type": "string",
+                    "example": "123456"
+                },
+                "username": {
+                    "type": "string",
+                    "example": "testuser"
+                }
+            }
+        },
         "models.UpdateTaskRequest": {
             "type": "object",
             "properties": {
@@ -428,9 +493,6 @@
                 }
             }
         },
-        "models.User": {
-            "type": "object"
-        },
         "rest.Response": {
             "type": "object",
             "properties": {
@@ -442,6 +504,14 @@
                 },
                 "result": {}
             }
+        }
+    },
+    "securityDefinitions": {
+        "JWT": {
+            "description": "JWT token",
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
