# go-task-manager-service/internal/controller/http/models/user.go
@@ -1,0 +1,11 @@
+package models
+
+type RegisterUserRequest struct {
+	Username string `json:"username" binding:"required" example:"testuser"`
+	Password string `json:"password" binding:"required" example:"123456"`
+}
+
+type LoginUserRequest struct {
+	Username string `json:"username" binding:"required" example:"testuser"`
+	Password string `json:"password" binding:"required" example:"123456"`
+}
